# gnucash-asset-allocation

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
examples/: example.gnucash
gnucash_asset_allocation/: __main__.py  config.py  lazy_asset_allocation.py
gnucash_asset_allocation/gnucash/: __init__.py  asset.py  book.py
tests/: conftest.py  test_config.py  test_lazy_asset_allocation.py
tests/books/: sample-multiple-currencies.gnucash  sample-no-prices.gnucash  sample.gnucash
tests/gnucash/: test_book.py
